@@ -67,13 +67,13 @@ class RemoteLitleTest < Test::Unit::TestCase
       name: 'Tom Black',
       routing_number:  '011075150',
       account_number: '4099999992',
-      account_type: 'Checking'
+      account_type: 'checking'
     )
     @authorize_check = check(
       name: 'John Smith',
       routing_number: '011075150',
       account_number: '1099999999',
-      account_type: 'Checking'
+      account_type: 'checking'
     )
     @store_check = check(
       routing_number: '011100012',
