@@ -14,6 +14,7 @@
 * Add state to the netbanx payload [Girardvjonathan] #3024
 * Barclaycard Smartpay: Improves Error Handling [deedeelavinder] #3026
 * Braintree: Fix passing phone-only billing address [curiousepic] #3025
+* Litle: Capitalize check account type [curiousepic] #3028
 
 == Version 1.85.0 (September 28, 2018)
 * Authorize.Net: Support custom delimiter for cim [curiousepic] #3001
